# base-cpp-data-science

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-base  Dockerfile-builder  makefile
dspack/: ID3.cpp  ID3.h  NaiveBayesClassifier.cpp  NaiveBayesClassifier.h  Table.cpp  Table.h  clustering.cpp  clustering.h  decision-trees.cpp  decision-trees.h  gradient-descent.cpp  gradient-descent.h  hypothesis-and-inference.cpp  hypothesis-and-inference.h  introduction.cpp  introduction.h  kmeans.cpp  kmeans.h  linear-algebra.cpp  linear-algebra.h  linear_algebra.cpp  linear_algebra.h  logistic-regression.cpp  logistic-regression.h  machine-learning.cpp  manipulation.cpp  manipulation.h  mapreduce.cpp  mapreduce.h  multiple-regression.cpp  multiple-regression.h  mysqrt.h  naive-bayes.cpp  naive-bayes.h  nearest-neighbors.cpp  nearest-neighbors.h  network-analysis.cpp  network-analysis.h  neural-networks.cpp  neural-networks.h  (+14 more)
include/: dspack.h
src/dspack/: mysqrt.cpp  probability.cpp  probability.h  round.cpp  round.h  strength.cpp
test-dspack/: test-decision-trees.cpp  test-linear-algebra.cpp  test-machine-learning.cpp  test-mysqrt.cpp  test-probability.cpp  test-stats.cpp  test-strength.cpp
test-dspack/test-dspack/: test-dspack.project
test/test-dspack/: test-mysqrt.cpp  test-probability.cpp  test-strength.cpp
